--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.jsqlparser</groupId>
+			<artifactId>jsqlparser</artifactId>
+			<version>4.8</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
