--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,10 @@
 			<version>4.8</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
