--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Property files
+/src/main/resources/application.properties
 /src/main/resources/application-dev.properties
 /src/main/resources/application-prod.properties
 /src/main/resources/application-stage.properties
@@ -6,6 +7,10 @@
 
 # Firebase service account keys
 src/main/resources/firebase/*.json
+
+/src/main/resources/certificates
+/run-scripts
+
 
 HELP.md
 src/main/java/com/aidb/aidb_backend/.DS_Store
