--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-# Property files
-/src/main/resources/application.properties
-/src/main/resources/application-dev.properties
-/src/main/resources/application-prod.properties
-/src/main/resources/application-stage.properties
-/src/main/resources/application-test.properties
+# Environment secrets
+.env.*
 
 # Firebase service account keys
 src/main/resources/firebase/*.json
